# Backend_Atlas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_config.py  init.py  main.py  openapi_atlas.yaml  pyproject.toml  requirements.in  requirements.txt
app/: db.py  main.py  models.py
app/core/: auth.py  config.py  db_config.py  error_handler.py  middlewares.py  rbac.py  responses.py  security.py  settings.py
app/db/: __init__.py  database.py  db.py  engine.py
app/dependencies/: auth.py  repositories.py  services.py
app/models/: base.py  models.py
app/repositories/: base.py  comment.py  costume.py  email_notification.py  game.py  game_option.py  game_question.py  nation.py  nation_info.py  permission.py  refresh_session.py  role.py  settlement_zone.py  user.py
app/routers/: auth.py  comment.py  costume.py  game.py  game_option.py  game_question.py  health.py  nation.py  nation_info.py  permission.py  role.py  settlement_zone.py  user.py
app/schemas/: auth.py  comment.py  costume.py  errors.py  filters.py  game.py  game_option.py  game_question.py  nation.py  nation_info.py  permission.py  role.py  settlement_zone.py  user.py
app/services/: authenticator.py  bootstrapper.py  comment.py  costume.py  email.py  game.py  game_option.py  game_question.py  nation.py  nation_info.py  permission.py  refresh.py  role.py  settlement_zone.py  user.py
app/utils/: errors.py  hasher.py  logger.py  pagination.py
migrations/: env.py
migrations/versions/: 20260429_add_refresh_session.py  2dbd1b6ad5b3_remove_user_id_from_comment_add_author_.py  75930a939c48_init.py  a0a90c6e10ba_init.py  dd0074b55dbd_init.py  e200cd9abbc0_init.py  e4a984910f14_switch_json_to_jsonb.py  e596e1421753_add_email_notification_table.py  f9072b493a38_init.py
nginx/: nginx.conf
templates/: password_reset.html  verify.html
(+16 files in other folders)
