[project]
name = "backend-atlas"
version = "0.1.0"
description = "Backend for Atlas project"
authors = [
    {name = "Atlas Team"}
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
    "uvicorn[standard]",
    "sqlmodel",
    "asyncpg",
    "pydantic-settings",
    "greenlet",
    "email-validator",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",
    "F",
    "FAST",
    "PL",
    "I",
    "ARG",
    "RET",
    "ASYNC",
    "B",
    "A",
    "ICN",
    "SLF",
    "SIM",
    "C90",
    "N",
    "W"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
